--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
+
 <head>
     <title>shop salar</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
 
     <div class="main">
@@ -22,8 +24,29 @@
                 <button class="login_btn">ثبت نام | ورود</button>
             </div>
         </div>
+        <div class="page_intro">
+            <div class="container">
+                <div class="page_intro_right">
+                    <h1>
+                        فروشگاه آنلاین
+                        <br> شاپ سالار
+                    </h1>
+                    <div class="page_intro_right_btns">
+                        <button class="page_intro_right_btn">دانلود اپلیکیشن</button>
+                        <button class="page_intro_right_btn">فروشگاه</button>
+                    </div>
+                </div>
+                <div class="page_intro_left">
+                        <img src="assets/img/shopGirls.png" alt="">
+                </div>
+                <div class="clearfix">
+
+                </div>
+            </div>
+        </div>
     </div>
 
 
 </body>
+
 </html>
