--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>shop salar</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -37,13 +38,136 @@
                     </div>
                 </div>
                 <div class="page_intro_left">
-                        <img src="assets/img/shopGirls.png" alt="">
+                    <img src="assets/img/shopGirls.png" alt="">
                 </div>
                 <div class="clearfix">
 
                 </div>
             </div>
         </div>
+
+        <div class="new_posts">
+            <div class="container">
+                <h2>جدید ترین محصولات</h2>
+                <div class="new_post">
+                    <div class="new_post_card">
+                        <div class="new_post_pic">
+                            <img src="assets/img/dress1.jpg" alt="">
+                        </div>
+                        <div class="new_post_body">
+                            <div>
+                                <p class="new_post_title">لباس راحتی</p>
+                                <p class="new_post_price">250,000تومان</p>
+                                <div class="clearfix">
+
+                                </div>
+                            </div>
+                            <div>
+                                <p class="new_post_description">لباس راحتی برای خانه</p>
+                                <p class="new_post_price_off">189,000</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="new_post">
+                    <div class="new_post_card">
+                        <div class="new_post_pic">
+                            <img src="assets/img/dress2.jpg" alt="">
+                        </div>
+                        <div class="new_post_body">
+                            <div>
+                                <p class="new_post_title">لباس راحتی</p>
+                                <p class="new_post_price">250,000تومان</p>
+                                <div class="clearfix">
+
+                                </div>
+                            </div>
+                            <div>
+                                <p class="new_post_description">لباس راحتی برای خانه</p>
+                                <p class="new_post_price_off">189,000</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="new_post">
+                    <div class="new_post_card">
+                        <div class="new_post_pic">
+                            <img src="assets/img/dress3.jpg" alt="">
+                        </div>
+                        <div class="new_post_body">
+                            <div>
+                                <p class="new_post_title">لباس راحتی</p>
+                                <p class="new_post_price">250,000تومان</p>
+                                <div class="clearfix">
+
+                                </div>
+                            </div>
+                            <div>
+                                <p class="new_post_description">لباس راحتی برای خانه</p>
+                                <p class="new_post_price_off">189,000</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="new_post">
+                    <div class="new_post_card">
+                        <div class="new_post_pic">
+                            <img src="assets/img/dress4.jpg" alt="">
+                        </div>
+                        <div class="new_post_body">
+                            <div>
+                                <p class="new_post_title">لباس راحتی</p>
+                                <p class="new_post_price">250,000تومان</p>
+                                <div class="clearfix">
+
+                                </div>
+                            </div>
+                            <div>
+                                <p class="new_post_description">لباس راحتی برای خانه</p>
+                                <p class="new_post_price_off">189,000</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
 
 
