--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                 </div>
             </div>
         </div>
-
         <div class="new_posts">
             <div class="container">
                 <h2>جدید ترین محصولات</h2>
@@ -135,6 +134,22 @@
                             </div>
                         </div>
                     </div>
+
+                </div>
+                <div class="clearfix">
+
+                </div>
+            </div>
+        </div>
+        <div class="home_ad">
+            <div class="container">
+                <div class="home_ad_right">
+                    <img src="assets/img/ad1.jpg" alt="تبلیغات لباس">
+                </div>
+                <div class="home_ad_left">
+                    <img src="assets/img/ad2.png" alt="تبلیغات تیشرت">
+                </div>
+                <div class="clearfix">
 
                 </div>
             </div>
