--- a/index.html
+++ b/index.html
@@ -374,13 +374,21 @@
                 <div class="clearfix">
 
                 </div>
+                <hr>
+                <div class="under_footer">
+                    <p>تمام حقوق سایت کاملا محفوض است</p>
+                    <div class="footer_social_item">
+                        <a href=""><img src="assets/img/icons/instagram.svg" alt=""></a>
+                        <a href=""><img src="assets/img/icons/telegram.svg" alt=""></a>
+                        <a href=""><img src="assets/img/icons/twitter.svg" alt=""></a>
+                    </div>
+                </div>
+                <div class="clearfix">
+
+                </div>
+
             </div>
         </div>
-        <hr>
     </div>
-
-
-
 </body>
-
 </html>
