--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@
                 </div>
                 <nav>
                     <ul class="header_nav">
-                        <li><a href="#">صفحه اصلی</a></li>
-                        <li><a href="#">محصولات</a></li>
+                        <li><i style="background: url('assets/img/icons/homepage.svg') center no-repeat;" class="header_icon"></i><a href="#">صفحه اصلی</a></li>
+                        <li><i style="background: url('assets/img/icons/shopping-bag.svg') center no-repeat;" class="header_icon"></i><a href="#">محصولات</a></li>
+                        <li class="drop_down">
+                            <span>دسته ها</span>
+                            <i class="drop_down_icon"></i>
+                            <ul class="drop_down_menu">
+                                <li><a href="#">پیراهن</a></li>
+                                <li><a href="#">شلوار</a></li>
+                                <li><a href="#">کفش</a></li>
+                                <li><a href="#">جوراب</a></li>
+                            </ul>
+                        </li>
                         <li><a href="#">تماس با ما</a></li>
-                        <li><a href="#">درباره ما</a></li>
                     </ul>
                 </nav>
                 <button class="login_btn">ثبت نام | ورود</button>
